# mcp-plugin-api

./: Cargo.toml  QUICK_START.md  README.md
.github/workflows/: deploy-docs.yml
src/: lib.rs  macros.rs  resource.rs  tool.rs  utils.rs
