[package]
name = "mcp-plugin-api"
version = "0.1.0"
edition = "2021"
description = "MCP Plugin API - Interface definitions for ConverZen MCP server plugins"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies for the plugin API
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
schemars = "1"

