[package]
name = "mcp-plugin-api"
version = "0.1.0"
edition = "2021"
description = "A secure, high-performance API for building MCP plugins in Rust."
license = "MIT OR Apache-2.0" # Standard Rust licensing
repository = "https://github.com/converzen/mcp-plugin-api"
homepage = "https://github.com/converzen/mcp-plugin-api"
readme = "README.md"
keywords = ["mcp", "plugin", "security", "rust"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Core dependencies for the plugin API
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
schemars = "1"